Added Score + Boost label (design not finished) and added initial logic for counting points

--- a/Splashy/Resources/en.lproj/Localizable.strings
+++ b/Splashy/Resources/en.lproj/Localizable.strings
@@ -11,3 +11,8 @@
 "gameover-score-intro" = "You've picked";
 "gameover-score-object" = "rubies!";
 
+"score-points" = "points";
+"score-boost" = "boost";
+
+
+
