--- a/Splashy/Resources/en.lproj/Localizable.strings
+++ b/Splashy/Resources/en.lproj/Localizable.strings
@@ -14,3 +14,6 @@
 "score-points" = "points";
 "score-point" = "point";
 "score-boost" = "boost";
+
+// MARK: - Unit Testing
+"unitTest-test" = "test";
